Add alt/shift logo from Cloudinary

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
             width: 90%;
             height: auto;
             margin-bottom: 3rem;
-            filter: brightness(0) invert(1); /* Makes logo white */
         }
         
         /* Construction Message */
@@ -160,7 +159,7 @@
     <!-- Content -->
     <div class="content">
         <!-- Logo -->
-        <img src="altshift-logo.jpg" alt="alt/shift" class="logo-img">
+        <img src="https://res.cloudinary.com/dkl8kiemy/image/upload/v1770086895/A-S-_LOGO_POSITIVE_rvo0a8.png" alt="alt/shift" class="logo-img">
         
         <!-- Construction Message -->
         <div class="message">Website Under Construction</div>
